# FormPurchaseOrder

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
classes/: base_class.py  form_engagement_report.py  form_nmp_info.py  form_technical_task_common.py  form_technical_task_sep.py
configs/: cell_formats.py  config.py  texts.py
static/css/: main.css
templates/: index.html
tests/: conftest.py  constants.py  export.xlsx
tests/expected_data/: 2_Сведения_о_НМЦ_Кабельно-проводниковая продукция.xlsx  3_Отчёт_по_вовлечению_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q11_ИНВЕСТИЦИИ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q11_РЕМОНТ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q11_ЭКСПЛУАТАЦИЯ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q31_ИНВЕСТИЦИИ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q31_РЕМОНТ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q31_ЭКСПЛУАТАЦИЯ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q41_ИНВЕСТИЦИИ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q41_РЕМОНТ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q41_ЭКСПЛУАТАЦИЯ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q61_ЭКСПЛУАТАЦИЯ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q91_ИНВЕСТИЦИИ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q91_РЕМОНТ_Кабельно-проводниковая продукция.xlsx  ТЗ_7Q91_ЭКСПЛУАТАЦИЯ_Кабельно-проводниковая продукция.xlsx  ТЗ_7QB1_РЕМОНТ_Кабельно-проводниковая продукция.xlsx  ТЗ_7QB1_ЭКСПЛУАТАЦИЯ_Кабельно-проводниковая продукция.xlsx  ТЗ_ИНВЕСТИЦИИ_Кабельно-проводниковая продукция_Общее.xlsx  ТЗ_РЕМОНТ_Кабельно-проводниковая продукция_Общее.xlsx  ТЗ_ЭКСПЛУАТАЦИЯ_Кабельно-проводниковая продукция_Общее.xlsx
tests/functional/: test_compare_files.py
utilities/: dataclass_helper.py  helpers.py
