[tool.poetry]
name = "formtechtask"
version = "1.0.0"
description = ""
authors = ["Zondrillo <52russiadk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
xlsxwriter = "^3.1.9"
openpyxl = "^3.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
assertpy = "^1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
